# 19th-EatHub-Backend

./: .env.example  .env_example  .flake8  .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
nginx/: prod.conf
payments/: admin.py  ecpay_service.py  linepay_service.py  models.py  payment_flow.py  serializers.py  subscription_service.py  urls.py  validators.py  views.py
payments/migrations/: 0001_initial.py
promotions/: admin.py  coupon_urls.py  merchant_urls.py  models.py  promotion_urls.py  serializers.py  urls.py  views.py
restaurants/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  authentication.py  favorite_urls.py  models.py  serializers.py  urls.py  user_coupon_urls.py  utils.py  views.py
users/tests/: test_apis.py  test_views.py
utilities/: cloudinary_upload.py  email.util.py  openai_api.py  place_api.py
utilities/data_builder/: build_density.py  build_restaurant_data.py
